--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <!--------------About Me-------------->
         <section>
             <h2>About Me</h2>
-            <div>
-            <img src="image/my photo.jpg" alt="This is Biva" width="33%">
+            <div class="about">
+            <img src="image/my photo.jpg" alt="This is Biva" width="">
             <h3>Umme Salma Biva</h3>
             <a href="https://twitter.com/voiceofhighways" target="_blank">Twitter</a>&nbsp;&nbsp;|&nbsp;&nbsp;
             <a href="https://facebook.com/voiceofhighways" target="_blank">Facebook</a>&nbsp;&nbsp;|&nbsp;&nbsp;
